# rust-html-generator

./: .gitignore  Cargo.toml  README.md  justfile  logic.js  out_nice.html  output.html  output_rust_ast.html  output_test_rust_crate.html  tree.html  tree_script.js  tree_style.css
css/: fold.css  jump.css  keywords.css  style.css  svgs.css  tree_style.css
examples/: for_demo.html
js/: logic.js
latex/: ref.bib  thesis.tex
latex/chapters/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter6.tex
src/: app.rs  args.rs  css.rs  handlers.rs  highlights.rs  html.rs  js.rs  jumps.rs  lib.rs  main.rs  parser.rs  templates.rs
src/render/: compressor.rs  html_generator.rs  mod.rs  render.rs  report_generator.rs  traverse.rs
src/render/generators/: html.rs  html_token.rs  mod.rs  report.rs
src/render/html_processor/: folding.rs  html_token.rs  mod.rs  processor.rs
src/render/static_files/: css.rs  js.rs  mod.rs  templates.rs
src/render/syntax_processor/: folding.rs  html_token.rs  mod.rs  processor.rs
src/templates/: code.html  main.html
